website: Remove carlavilla@ as doceng@ member
As per his request.

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3765,7 +3765,7 @@
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
-:doceng-members: {blackend}, {carlavilla}, {dbaio}, {fernape}, {hrs}
+:doceng-members: {blackend}, {dbaio}, {fernape}, {hrs}
 :doceng-secretary-email: <doceng-secretary@FreeBSD.org>
 
 // FreeBSD Donations Liaison
