--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -211,6 +211,12 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+[[wireless-networking]]
+=== Wireless Networking
+
+The LinuxKPI, particularly for 802.11, has been enhanced to support crypto offload and 802.11n and 802.11ac standards.
+The man:iwlwifi[4] wireless driver is the first to make use of these new features supporting 802.11ac for some Intel Wi-Fi 5, and all of Intel Wi-Fi 6 and Wi-Fi 7 hardware. (Sponsored by The FreeBSD Foundation)
+
 [[hardware]]
 == Hardware Support
 
