--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -6,7 +6,7 @@ sidenav: download
 :localRel: 14.3
 :releaseCurrent: 14.3-RELEASE
 :releaseBranch: 14-STABLE
-:releasePrev: X.Y-RELEASE
+:releasePrev: 14.2-RELEASE
 :releaseNext: X.Y-RELEASE
 :releaseType: "release"
 
@@ -84,10 +84,25 @@ This section lists the various Security Advisories and Errata Notices since {rel
 | Date
 | Topic
 
-|No advisories.
-|
-|
+| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:01.openssh.asc[FreeBSD-SA-25:01.openssh]
+| 2025-01-29
+| OpenSSH Keystroke Obfuscation Bypass
 
+| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:02.fs.asc[FreeBSD-SA-25:02.fs]
+| 2025-01-29
+| Buffer overflow in some filesystems via NFS
+
+| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:03.etcupdate.asc[FreeBSD-SA-25:03.etcupdate]
+| 2025-01-29
+| Unprivileged access to system files
+
+| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:04.ktrace.asc[FreeBSD-SA-25:04.ktrace]
+| 2025-01-29
+| Uninitialized kernel memory disclosure via man:ktrace[2]
+
+| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:05.openssh.asc[FreeBSD-SA-25:05.openssh]
+| 2025-02-21
+| Multiple vulnerabilities in OpenSSH
 |===
 
 [[errata]]
