--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -115,11 +115,37 @@ This section lists the various Security Advisories and Errata Notices since {rel
 | Date
 | Topic
 
-|No notices.
-|
-|
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:01.rpc.asc[FreeBSD-EN-25:01.rpc]
+| 2025-01-29
+| NULL pointer dereference in the NFSv4 client
 
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:02.audit.asc[FreeBSD-EN-25:02.audit]
+| 2025-01-29
+| System call auditing disabled by DTrace
 
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:03.tzdata.asc[FreeBSD-EN-25:03.tzdata]
+| 2025-01-29
+| Timezone database information update
+
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:04.tzdata.asc[FreeBSD-EN-25:04.tzdata]
+| 2025-04-10
+| Timezone database information update
+
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:05.expat.asc[FreeBSD-EN-25:05.expat]
+| 2025-04-10
+| Update expat to 2.7.1
+
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:06.daemon.asc[FreeBSD-EN-25:06.daemon]
+| 2025-04-10
+| man:daemon[8] missing signals
+
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:07.openssl.asc[FreeBSD-EN-25:07.openssl]
+| 2025-04-10
+| Update OpenSSL to 3.0.16
+
+| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:08.caroot.asc[FreeBSD-EN-25:08.caroot]
+| 2025-04-10
+| Root certificate bundle update
 |===
 
 [[userland]]
