--- a/website/content/en/releases/14.3R/schedule.adoc
+++ b/website/content/en/releases/14.3R/schedule.adoc
@@ -39,9 +39,10 @@ General discussions about the pending release and known issues should be sent to
 |BETA1 builds begin |2 May 2025 |2 May 2025 |First beta test snapshot.
 |BETA2 builds begin |9 May 2025 |9 May 2025 |Second beta test snapshot.
 |BETA3 builds begin |16 May 2025 |- |Third beta test snapshot.
-|RC1 builds begin |23 May 2025 |- |First release candidate.
-|RELEASE builds begin |30 May 2025 |- |{localRel}-RELEASE builds begin.
-|RELEASE announcement |3 June 2025 |- |{localRel}-RELEASE press release.
+|BETA4 builds begin |23 May 2025 |- |Third beta test snapshot.
+|RC1 builds begin |30 May 2025 |- |First release candidate.
+|RELEASE builds begin |6 June 2025 |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |10 June 2025 |- |{localRel}-RELEASE press release.
 |{localRelPrev} EoL |30 September 2025 |- |{localRelPrev}-RELEASE no longer supported.
 |{localRel} EoL |30 June 2026 |- |{localRel}-RELEASE no longer supported.
 |{localBranchStable} EoL |30 November 2028 |- |{localBranchStable} no longer supported.
