--- a/website/content/en/releases/14.3R/schedule.adoc
+++ b/website/content/en/releases/14.3R/schedule.adoc
@@ -38,7 +38,7 @@ General discussions about the pending release and known issues should be sent to
 |{localBranchReleng} branch |2 May 2025 |2 May 2025 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |2 May 2025 |2 May 2025 |First beta test snapshot.
 |BETA2 builds begin |9 May 2025 |9 May 2025 |Second beta test snapshot.
-|BETA3 builds begin |16 May 2025 |- |Third beta test snapshot.
+|BETA3 builds begin |16 May 2025 |16 May 2025 |Third beta test snapshot.
 |BETA4 builds begin |23 May 2025 |- |Fourth beta test snapshot.
 |RC1 builds begin |30 May 2025 |- |First release candidate.
 |RELEASE builds begin |6 June 2025 |- |{localRel}-RELEASE builds begin.
