--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -826,6 +826,8 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 
 &hwlist.hifn;
 
+&hwlist.qat;
+
 &hwlist.safe;
 
 [[misc]]
