HW Relnotes: Add remaining Cryptographic Accelerators
Add the remaining cryptographic engines which have manuals,
armv8crypto, glxsb, padlock, qat_c2xxx, and safexcel to the
hardware release notes template and the upcoming 14.3 release.

Discussed with:		markj, mhorne
Reviewed by:		carlavilla
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D50403

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -822,13 +822,23 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 [[crypto-accel]]
 === Cryptographic Accelerators
 
+The man:armv8crypto[4] driver supports the AES, SHA-1, SHA-2, and finite field Arithmetic engines in processors implementing the ARMv8 Cryptograpic Extension.
+
 &hwlist.ccr;
+
+The man:glxsb[4] driver supports the security block found in AMD Geode LX devices.
 
 &hwlist.hifn;
 
+The man:padlock[4] driver supports the AES/RNG/RSA/SHA-1, and SHA-2 engine found on Via Technologies C7, C3, and Eden devices.
+
 &hwlist.qat;
 
+The man:qat_c2xxx[4] driver supports the Intel QuickAssist Technology engine found on Atom C2000 devices.
+
 &hwlist.safe;
+
+&hwlist.safexcel;
 
 [[misc]]
 === Miscellaneous
