--- a/website/content/en/releases/14.3R/hardware.adoc
+++ b/website/content/en/releases/14.3R/hardware.adoc
@@ -4363,6 +4363,11 @@ the Bluetooth specification v1.1, including:
 === Cryptographic Accelerators
 
 
+
+The man:armv8crypto[4] driver supports the AES, SHA-1, SHA-2, and finite field Arithmetic engines in processors implementing the ARMv8 Cryptograpic Extension.
+
+
+
 The
 **ccr**
 driver supports the crypto accelerator engine included on adapters
@@ -4373,6 +4378,10 @@ based on the T6 ASIC:
 *	Chelsio T62100-LP-CR
 *	Chelsio T62100-SO-CR
 *	Chelsio T62100-CR
+
+
+
+The man:glxsb[4] driver supports the security block found in AMD Geode LX devices.
 
 
 
@@ -4418,6 +4427,27 @@ Soekris Engineering vpn1401 and vpn1411
 
 
 
+The man:padlock[4] driver supports the AES/RNG/RSA/SHA-1, and SHA-2 engine found on Via Technologies C7, C3, and Eden devices.
+
+
+
+The man:qat[4] driver supports the following
+Intel QuickAssist Technology Engines:
+
+*	Intel C62x Chipset
+*	Intel Atom C3000 processor product family
+*	Intel QuickAssist Adapter 8960 "Lewis Hill"
+*	Intel QuickAssist Adapter 8970 "Lewis Hill"
+*	Intel Communications Chipset 8925 to 8955 Series
+*	Intel Atom P5300 processor product family
+*	Intel QAT 4xxx Series
+
+
+
+The man:qat_c2xxx[4] driver supports the Intel QuickAssist Technology Engine found on Atom C2000 devices.
+
+
+
 The
 **safe**
 driver supports the following SafeXcel chips:
@@ -4427,6 +4457,10 @@ driver supports the following SafeXcel chips:
 	symmetric crypto operations, RNG, public key operations, and full IPsec
 	packet processing.  
 	SafeNet 1741    A faster version of the 1141.
+
+
+
+The man:safexcel[4] driver supports the cryptographic acceleration functions of the Inside Secure EIP-97 device found on some Marvell systems-on-chip.
 
 
 [[misc]]
