Fix typo: s|sligthly|slightly|

--- a/documentation/content/en/books/handbook/firewalls/_index.adoc
+++ b/documentation/content/en/books/handbook/firewalls/_index.adoc
@@ -1638,7 +1638,7 @@ natd_interface="rl0"
 
 In general, the above ruleset as explained for in-kernel NAT can also be used together with man:natd[8].
 The exceptions are the configuration of the in-kernel NAT instance `(ipfw -q nat 1 config ...)` which is not needed together with reassemble rule 99 because its functionality is included in the `divert` action.
-Rule number 100 and 1000 will have to change sligthly as shown below.
+Rule number 100 and 1000 will have to change slightly as shown below.
 
 [.programlisting]
 ....
