HW Relnotes: Add a section for Etherswitch
FreeBSD has quite a few drivers supporting several hardware Ethernet
switches. Add all(?) of them to the Hardware Release Notes template,
under a new category since this section is not the smallest section,
and Ethernet Interfaces is quite congested.

Discussed with:		adrian (special thanks), bcr, mhorne
Reviewed by:		carlavilla
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D50303

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -524,6 +524,31 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 &hwlist.xl;
 
+[[switch]]
+=== Ethernet Switches
+
+The man:adm6996fc[4] driver supports the Infineon ADM6996FC Fast Ethernet switch controller.
+
+&hwlist.ar40xx;
+
+&hwlist.arswitch;
+
+&hwlist.e6000sw;
+
+&hwlist.e6060sw;
+
+The man:felix[4] driver supports the Microsemi VSC9959 Felix Gigabit Ethernet switch controller found in the NXP Layerscape LS1028A SoC.
+
+&hwlist.ip17x;
+
+The man:ksz8995ma[4] driver supports the Micrel KSZ8995MA/KSZ8995FQ Fast Ethernet switch controller.
+
+&hwlist.mtkswitch;
+
+The *rtl8366* driver supports the Realtek 8366 Gigabit Ethernet switch controller.
+
+The *ukswitch* driver is designed to support potentially unknown Ethernet Switches.
+
 [[wlan]]
 === Wireless Network Interfaces
 
