--- a/website/content/en/status/report-2025-01-2025-03/ci.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/ci.adoc
@@ -21,7 +21,7 @@ Concurrently, we collaborated with external projects and companies to enhance th
 Important completed tasks:
 
 * Add jobs to build amd64 main, stable/14, and stable/13 with GCC 14 (jhb@)
-* Woking with intern students to fix the failing and skipped test cases (lwhsu@)
+* Working with intern students to fix the failing and skipped test cases (lwhsu@)
 * Upgrade and switch the Jenkins server to LTS version.
 * Participate the Foundation's Sovereign Tech Agency (STA) work package C: improve the project's CI/CD
 
