--- a/website/content/en/status/report-2025-01-2025-03/clusteradm.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/clusteradm.adoc
@@ -25,7 +25,7 @@ In 2025Q1, we started upgrading critical services in the cluster and testing to 
 ==== Git web interface mirrors
 
 While the project's public read-only git repository is built by a globally distributed mirror, the web interface (cgit) is not.
-We found there is increasing requirement of accessing it, and for improving the response time and reilibility, we setup the cgit on the mirrors around the world.
+We found there is increasing requirement of accessing it, and for improving the response time and reliability, we setup the cgit on the mirrors around the world.
 
 ==== FreeBSD official mirrors
 
