--- a/website/content/en/status/report-2025-01-2025-03/hackathon-202503.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/hackathon-202503.adoc
@@ -13,7 +13,7 @@ Thanks to Christoff Visser and Internet Initiative Japan Inc. who sponsored the 
 ===== Sheng-Yi Hung
 
 - man:ipheth[4]: The iPhone tethering uses NCM on newer iOS, modified ipheth(4) to supporting it. Patch: link:https://reviews.freebsd.org/D49431[]
-- Sccahe for FreeBSD base: the FreeBSD base supports ccache to cache the build result. For cross machine build, we need a distributed cache mechanism - that is - scccahe. In Hackathon, the patch for adding sccache support is created: link:https://reviews.freebsd.org/D49417[]
+- Sccahe for FreeBSD base: the FreeBSD base supports ccache to cache the build result. For cross machine build, we need a distributed cache mechanism - that is - sccache. In Hackathon, the patch for adding sccache support is created: link:https://reviews.freebsd.org/D49417[]
 
 ===== Kristof Provost
 
