--- a/website/content/en/status/report-2025-01-2025-03/syzkaller-wifi.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/syzkaller-wifi.adoc
@@ -19,7 +19,7 @@ Some of the design details include:
 * Inject 802.11 frames via the existing ioctl interface provided by wtap
 * Inject 802.11 frames via the Netlink interface, which is not supported by FreeBSD for now
 
-We haved developed a WiFi fuzzer using existing ioctl interface provided by wtap.
+We have developed a WiFi fuzzer using existing ioctl interface provided by wtap.
 One can check out the result in this link:https://github.com/estarriol43/syzkaller/tree/freebsd/frame-injection-v2[branch].
 
 We hope to introduce Netlink interface, which is adopted by the Syzkaller to inject 802.11 frames into Linux kernel, to FreeBSD to improve the compatibilities between Linux and FreeBSD.
