Status/2025Q1: Various fixes
Mostly suggested by Vale linter.

--- a/website/content/en/status/report-2025-01-2025-03/container-orchestration.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/container-orchestration.adoc
@@ -1,9 +1,9 @@
 === Container orchestration: Overlord, Director and AppJail
 
 Links: +
-link:https://github.com/DtxdF/AppJail[AppJail on Github] URL: link:https://github.com/DtxdF/AppJail[] +
-link:https://github.com/DtxdF/Director[Director on Github] URL: link:https://github.com/DtxdF/Director[] +
-link:https://github.com/DtxdF/Overlord[Overlord on Github] URL: link:https://github.com/DtxdF/Overlord[]
+link:https://github.com/DtxdF/AppJail[AppJail on GitHub] URL: link:https://github.com/DtxdF/AppJail[] +
+link:https://github.com/DtxdF/Director[Director on GitHub] URL: link:https://github.com/DtxdF/Director[] +
+link:https://github.com/DtxdF/Overlord[Overlord on GitHub] URL: link:https://github.com/DtxdF/Overlord[]
 
 Contact: Jesús Daniel Colmenares Oviedo <DtxdF@disroot.org>
 
