--- a/website/content/en/status/report-2025-01-2025-03/discord.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/discord.adoc
@@ -5,7 +5,8 @@ link:https://wiki.freebsd.org/Discord/DiscordServer[Discord Server] URL: link:ht
 
 Contact: Setesh Strong <setesh.strong@gmail.com>
 
-The FreeBSD Community Discord server has grown to over 5.3K members, with over 3K members active in the last month. To help support our community’s health and pursue growth in project contribution and engagement, the BSDlabs group developed the Helper program, more than two years ago now.
+The FreeBSD Community Discord server has grown to over 5.3K members, with over 3K members active in the last month.
+To help support our community’s health and pursue growth in project contribution and engagement, the BSDlabs group developed the Helper program, more than two years ago now.
 After several phases of growth, we have reached the point where the team has thrived enough that it has become necessary to divide it into three distinct functional teams.
 
 Our community health and culture helpers (@moderators) are led by Alexander Vereeken.
