--- a/website/content/en/status/report-2025-01-2025-03/foundation-infrastructure-modernization.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/foundation-infrastructure-modernization.adoc
@@ -1,6 +1,6 @@
 === Infrastructure Modernization
 
-Contact: Ed Maste <emaste@FreeBSD.org>
+Contact: Ed Maste <emaste@FreeBSD.org> +
 Contact: Alice Sowerby <alice@freebsdfoundation.org>
 
 The project started in Q3 of 2024 and was commissioned by the Sovereign Tech Agency with a budget of $745,000, to be spent over about one year.
