--- a/website/content/en/status/report-2025-01-2025-03/hackathon.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/hackathon.adoc
@@ -12,14 +12,17 @@ Thanks to Christoff Visser and Internet Initiative Japan Inc. who sponsored the 
 
 ===== Sheng-Yi Hung
 
-- man:ipheth[4]: The iPhone tethering uses NCM on newer iOS, modified ipheth(4) to supporting it. Patch: link:https://reviews.freebsd.org/D49431[]
-- Sccahe for FreeBSD base: the FreeBSD base supports ccache to cache the build result. For cross machine build, we need a distributed cache mechanism - that is - sccache. In Hackathon, the patch for adding sccache support is created: link:https://reviews.freebsd.org/D49417[]
+- man:ipheth[4]: The iPhone tethering uses NCM on newer iOS, modified man:ipheth[4] to supporting it.
+  Patch: link:https://reviews.freebsd.org/D49431[]
+- Sccahe for FreeBSD base: the FreeBSD base supports ccache to cache the build result.
+  For cross machine build, we need a distributed cache mechanism -- that is -- sccache.
+  In Hackathon, the patch for adding sccache support is created: link:https://reviews.freebsd.org/D49417[]
 
 ===== Kristof Provost
 
 Wrote a test case for bsnmpd’s snmp_pf module.
 This revealed that the BEGEMOT-PF-MIB.txt MIB file could not be parsed by bsnmpwalk, which was also fixed.
-Commits: gitef:712309a64512c7e4ebf0e10de8a5c59d5a185ae8[repository=src], gitef:c849f533326026501c28cb2c344b16723862551a[repository=src] and gitef:36586800803d24f1137d861bbaf487a6bde16a09[repository=src]
+Commits: gitref:712309a64512c7e4ebf0e10de8a5c59d5a185ae8[repository=src], gitref:c849f533326026501c28cb2c344b16723862551a[repository=src] and gitref:36586800803d24f1137d861bbaf487a6bde16a09[repository=src]
 
 ===== Aymeric Wibo
 
