--- a/website/content/en/status/report-2025-01-2025-03/openjdk.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/openjdk.adoc
@@ -19,8 +19,12 @@ We have also been following the development of OpenJDK 24 closely, and are just 
 In parallel with porting OpenJDK 24 work has been ongoing on moving the BSD port also to the mainline OpenJDK development tree, and the first patches have been accepted upstream.
 Currently the focus is on reviving the https://openjdk.org/projects/bsd-port/[OpenJDK BSD port project], as well as getting a separate project repository set up under it.
 
-A lot of the work of this quarter has gone into cleaning up the patches of the BSD port based on the development in the upstream mainline and jdk24 branches. Also a lot of time has been spent on improving the results of the built in test suites (jtreg and gtest) on FreeBSD. This has involved both changes to the tests themselves, but also various parts of the low level OpenJDK code. More work is needed to get the final few tests passing, especially on Aarch64, but compared to previous OpenJDK releases on FreeBSD the results have been improving.
+A lot of the work of this quarter has gone into cleaning up the patches of the BSD port based on the development in the upstream mainline and jdk24 branches.
+Also a lot of time has been spent on improving the results of the built in test suites (jtreg and gtest) on FreeBSD.
+This has involved both changes to the tests themselves, but also various parts of the low level OpenJDK code.
+More work is needed to get the final few tests passing, especially on Aarch64, but compared to previous OpenJDK releases on FreeBSD the results have been improving.
 
-Finally, a significant amount of time has been spent on communicating and discussing how to approach the goal of integrating the BSD support in the mainline OpenJDK codebase. The OpenJDK project has been very open, welcoming and supportive of the effort, and seems more than willing to help make this happen in a good way.
+Finally, a significant amount of time has been spent on communicating and discussing how to approach the goal of integrating the BSD support in the mainline OpenJDK codebase.
+The OpenJDK project has been very open, welcoming and supportive of the effort, and seems more than willing to help make this happen in a good way.
 
 Sponsor: The FreeBSD Foundation
