--- a/website/content/en/status/report-2025-01-2025-03/vision-accessibility-handbook.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/vision-accessibility-handbook.adoc
@@ -1,4 +1,4 @@
-=== Vision Accessibility - Accessibility Handbook
+=== Vision Accessibility -- Accessibility Handbook
 
 Link: +
 link:https://gitlab.com/alfix/freebsd-accessibility[Project Repository] URL: link:https://gitlab.com/alfix/freebsd-accessibility[]
