--- a/website/content/en/status/report-2025-01-2025-03/wiki.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/wiki.adoc
@@ -3,8 +3,8 @@
 Links: +
 link:https://wiki.freebsd.org/FrontPage[FreeBSD wiki front page] URL: link:https://wiki.freebsd.org/FrontPage[]
 
-Contact: Mark Linimon <linimon@freebsd.org> +
-Contact: Wiki admin <wiki-admin@freebsd.org>
+Contact: Mark Linimon <linimon@FreeBSD.org> +
+Contact: Wiki admin <wiki-admin@FreeBSD.org>
 
 The wiki team needs new blood.
 
