[hb][ports]: Briefly mention kmods repositories
Reviewed by:		bcr@
Differential Revision:	https://reviews.freebsd.org/D51614

--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -211,6 +211,52 @@ Then run this command to update the local package repositories catalogues for th
 # pkg update -f
 ....
 
+[[kmod-repository]]
+=== Kernel modules repositories
+
+The kernel module repositories allow users to install ready to use kernel
+modules like the ones used for graphic drivers and specific hardware.
+Starting with FreeBSD 14.3, the FreeBSD Project provides kernel modules built
+for every supported version. To create such a repository configuration if it
+does not exist, add the following to [.filename]#/usr/local/etc/pkg/repos/kmods.conf#:
+[source,shell]
+....
+FreeBSD-kmods: {
+        url: "pkg+https://pkg.FreeBSD.org/${ABI}/KMODSFLAVOR",
+        mirror_type: "srv",
+        signature_type: "fingerprints",
+        fingerprints: "/usr/share/keys/pkg",
+        enabled: yes
+}
+....
+
+`KMODSFLAVOR` respects the following pattern: `kmods_PORTBRANCH_MINORRELEASE`.
+
+For instance:
+
+.Kmodsflavor
+
+[options="header", cols="1,1,1"]
+|===
+| FreeBSD Release | ports main | ports quarterly
+
+| FreeBSD 14.2-RELEASE
+| kmods_latest_2
+| kmods_quarterly_2
+
+| FreeBSD 14.3-RELEASE
+| kmods_latest_3
+| kmods_quarterly_3
+
+| FreeBSD 14.3-STABLE
+| kmods_latest
+| kmods_quarterly
+
+| FreeBSD 15.0-CURRENT
+| kmods_latest
+| 
+|===
+
 [[pkg-configuration]]
 === Configure pkg
 
