Handbook: Improve IPv6 documentation
Reviewed by:	ivy, ziaee, carlavilla, olivier, des
Approved by:	des (mentor), doceng (doc)
Differential Revision:	https://reviews.freebsd.org/D49782

--- a/documentation/content/en/books/handbook/glossary.adoc
+++ b/documentation/content/en/books/handbook/glossary.adoc
@@ -903,6 +903,9 @@ See crossref:glossary[scsi-glossary,Small Computer System Interface].
 SG::
 See crossref:glossary[sg-glossary,Signal Ground].
 
+SLAAC::
+See crossref:glossary[slaac-glossary,StateLess Address AutoConfiguration].
+
 SMB::
 See crossref:glossary[smb-glossary,Server Message Block].
 
@@ -923,6 +926,10 @@ See crossref:glossary[str-glossary,Suspend To RAM].
 
 SVN::
 See crossref:glossary[svn-glossary,Subversion].
+
+[[slaac-glossary]]
+StateLess Address AutoConfiguration::
+{empty}
 
 [[smtpauth-glossary]]
 SMTP Authentication::
