HW Relnotes: Really add remaining Cryptographic Accelerators
Add aesni and ccp to the Cryptographic Accelerators section of the
Hardware Release Notes template.

Reported by:		jhb
Reviewed by:		carlavilla, markj
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D50439

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -847,7 +847,11 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 [[crypto-accel]]
 === Cryptographic Accelerators
 
+The man:aesni[4] driver supports the AES and SHA functions of x86 processors.
+
 The man:armv8crypto[4] driver supports the AES, SHA-1, SHA-2, and finite field Arithmetic engines in processors implementing the ARMv8 Cryptograpic Extension.
+
+The **ccp** driver supports the AMD Platform Security Processor (PSP) Cryptographic Coprocessor found in AMD Ryzen devices.
 
 &hwlist.ccr;
 
